@@ -342,9 +342,6 @@ sendcleanup:
         ap_log_rerror(APLOG_MARK,APLOG_DEBUG,APR_SUCCESS,private->r,
                                 "process terminating with code %d",private->exit_status);
         RIVET_MPM_BRIDGE_CALL(exit_handler,private);
-
-        //Tcl_Exit(private->exit_status);
-        //exit(private->exit_status);
     }
 
     /* We now reset the status to prepare the child process for another request */
